fix post club overflow

--- a/src/styles/basic/_figure.scss
+++ b/src/styles/basic/_figure.scss
@@ -177,7 +177,7 @@
     position: relative;
 
     width: $width-content;
-    max-width: none;
+    max-width: 100%;
 
     .button {
       margin: 0;
